@@ -3,6 +3,9 @@ The following changes have been made between John 1.7.3.2 and 1.7.3.3:
 * "make check" has been implemented (for Unix-like systems only).
 * The --test option will now take an optional argument - the duration of each
 benchmark in seconds.
+* Section .note.GNU-stack has been added to all assembly files to avoid the
+stack area unnecessarily being made executable on Linux systems that use this
+mechanism.
 
 The following changes have been made between John 1.7.3.1 and 1.7.3.2:
 
